tests/frontend/fail/array/cross_contract_out_of_bounds.act
contract A

constructor()

creates

  uint[3] ar := [1,2,3]



contract B

constructor(address<A> a)

creates

  int y := a.ar[3]
